MasterSlide code moved from LWPathway to MasterSlide.java has more reliable persistance of style objects style objects now centered, faded master slide labels at top/bottom LWComonent has new Flags enum -- IS_STYLE, FIXED_LOCATION, NO_DELETE, NO_LINKS API change: drawInParent->drawLocal LWMap.getNextUniqueID now synchronized just in case
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/trunk@5803 d66e5487-c4fa-4dda-8c8e-ca23240363c0